# myheritage

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
heritage/: __main__.py
heritage/cfg/: __init__.py  settings.py
heritage/dto/: __init__.py  state.py
heritage/entity/: __init__.py  button.py  media.py  message.py  user_step.py
heritage/pkg/: logger.py
heritage/pkg/pastvu/: api.py  model.py
heritage/usecase/: __init__.py  media.py
