[project]
name = "heritage"
version = "0.1.0"
description = "TG-bot for work with your heritage"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.0",
    "orjson>=3.11.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "ty>=0.0.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["heritage"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.14"

[[tool.ty.overrides]]
include = ["heritage/__main__.py"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
not-subscriptable = "ignore"
invalid-assignment = "ignore"
